# Wittgenstein

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  EXTENDING.md  UNCERTAINTY_ORCHESTRATION.md
mcp-server/: __init__.py  requirements.txt  server.py
outputs/claude-batch/: 2405.01133v3.md
scripts/: baseline_comparison.py  batch-verify.sh  batch_verify.py  test_llm_parser_e2e.py  threshold_sweep.py
src/: __init__.py  config.py  models.py
src/baseline/: __init__.py  global_reader.py  single_call_baseline.py
src/datasets/: __init__.py  processbench.py
src/evaluation/: __init__.py  alignment.py  judge.py  metrics.py
src/orchestrator/: __init__.py  global_read_orchestrator.py  orchestrator.py  router.py  uncertainty_orchestrator.py
src/parser/: __init__.py  content_parser.py  context_graph.py  enriched_segmenter.py  llm_content_parser.py  location_parser.py  schema_analyzer.py
src/reporting/: __init__.py  reporter.py
src/segmentation/: __init__.py  segmenter.py
src/utils/: __init__.py  chunking.py  llm.py  logging.py  safe_arithmetic.py  sandbox.py
src/verifiers/: __init__.py  base.py  citation_verifier.py  llm_only_verifier.py  math_verifier.py  registry.py  statistical_verifier.py  text_verifier.py  (+2 more)
tests/: __init__.py  test_baseline.py  test_chunking.py  test_evaluation.py  test_integration.py  test_llm_parser.py  test_parser.py  test_processbench.py  test_progressive_verifier.py  test_segmentation.py  test_statistical.py  test_uncertainty.py  test_verifiers.py
(+12 files in other folders)
