[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperena-verification"
version = "0.1.0"
description = "Automated scientific paper verification pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "sympy>=1.12",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "rich>=13.0",
    "loguru>=0.7",
    "pillow>=10.0",
    "numpy>=1.24",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# Optional: enables unit-conversion checks in the statistical verifier.
# Absent, unit checks are skipped (never guessed); arithmetic checks still work.
units = [
    "pint>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
